methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:3: error: too many arguments for method getBrushColor: ()java.awt.Color
      getBrushColor(c)
                   ^